[gd_scene load_steps=4 format=2]

[ext_resource path="res://ui/controllers/regional_prompting_controller.gd" type="Script" id=1]
[ext_resource path="res://ui/components/v_gradient.tscn" type="PackedScene" id=2]
[ext_resource path="res://ui/controllers/regional_prompting_entry.tscn" type="PackedScene" id=3]

[node name="RegionalPromptController" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Configs" type="HBoxContainer" parent="ScrollContainer"]
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="ScrollContainer/Configs"]
margin_bottom = 600.0

[node name="RegionsList" type="VBoxContainer" parent="ScrollContainer/Configs/ScrollContainer"]
margin_right = 40.0
margin_bottom = 28.0
size_flags_horizontal = 3

[node name="RegionEntry" parent="ScrollContainer/Configs/ScrollContainer/RegionsList" instance=ExtResource( 3 )]
margin_right = 40.0

[node name="ToolControllers" type="VBoxContainer" parent="ScrollContainer/Configs"]
margin_left = 4.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3

[node name="Prompt" type="TextEdit" parent="ScrollContainer/Configs/ToolControllers"]
margin_right = 1020.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TopGradient" parent="." instance=ExtResource( 2 )]

[node name="BottomGradient" parent="." instance=ExtResource( 2 )]
anchor_top = 1.0
anchor_bottom = 1.0

[connection signal="text_changed" from="ScrollContainer/Configs/ToolControllers/Prompt" to="." method="_on_Prompt_text_changed"]
